fix: contrast issues & 폰트 오류 해결

--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
 /* font */
 @font-face {
   font-family: "NanumSquareNeo";
-  src: url("font/NanumSquareNeoOTF-Lt.otf");
+  src: url("font/NanumSquareNeo-Variable.ttf");
   font-weight: 100;
 }
 
 @font-face {
   font-family: "NanumSquareNeo";
-  src: url("font/NanumSquareNeoOTF-Rg.otf");
+  src: url("font/NanumSquareNeo-Variable.ttf");
   font-weight: 300;
 }
 
 @font-face {
   font-family: "NanumSquareNeo";
-  src: url("font/NanumSquareNeoOTF-Md.otf");
+  src: url("font/NanumSquareNeo-Variable.ttf");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "NanumSquareNeo";
-  src: url("font/NanumSquareNeoOTF-SemiBold.otf");
+  src: url("font/NanumSquareNeo-Variable.ttf");
   font-weight: 500;
 }
 
 @font-face {
   font-family: "NanumSquareNeo";
-  src: url("font/NanumSquareNeoOTF-Bold.otf");
+  src: url("font/NanumSquareNeo-Variable.ttf");
   font-weight: 700;
 }
 
@@ -346,7 +346,7 @@ background-color: #f5f5f5;
   justify-content: space-between;
   padding: 15px 20px;
   font-size: 14px;
-  color: #333;
+  color: #3c3c43;
 }
 
 /* 2Depth 항목에 마우스를 올렸을 때 */
@@ -479,7 +479,7 @@ background-color: #f5f5f5;
   display: inline-block;
   padding: 10px 25px;
   background: #fff;
-  color: #333;
+  color: #3c3c43;
   text-decoration: none;
   font-weight: 500;
 }
@@ -581,7 +581,7 @@ background-color: #f5f5f5;
 
 .category-link span {
   font-size: 13px;
-  color: #333;
+  color: #3c3c43;
   font-weight: 500;
   white-space: nowrap;
 }
@@ -596,7 +596,7 @@ background-color: #f5f5f5;
 .swiper-button-next::after,
 .swiper-button-prev::after {
   font-size: 18px !important;
-  color: #999;
+  color: #3c3c43;
 }
 
 /* New Products Section */
@@ -619,7 +619,7 @@ background-color: #f5f5f5;
 
 .tab {
   font-size: 14.9px;
-  color: #9d9da0;
+  color: #3c3c43;
   white-space: nowrap;
   padding: 0;
   background: none;
@@ -729,11 +729,11 @@ background-color: #f5f5f5;
 }
 
 .article .rating span:first-of-type {
-  color: #9d9da0;
+  color: #3c3c43;
 }
 
 .article .rating span:last-of-type {
-  color: #9d9da0;
+  color: #3c3c43;
 }
 
 .container h4 {
@@ -852,7 +852,7 @@ background-color: #f5f5f5;
 .article-descriptions p {
   font-size: 15px;
   font-weight: 400;
-  color: #6d6d72;
+  color: #3c3c43;
   line-height: 1.5;
   margin: 0;
   word-break: keep-all;
@@ -916,7 +916,7 @@ background-color: #f5f5f5;
 
 .product-card .original-price {
   font-size: 10.9px;
-  color: #9d9da0;
+  color: #3c3c43;
   text-decoration: line-through;
   margin-bottom: 4px;
   line-height: 12px;
@@ -1010,7 +1010,7 @@ background-color: #f5f5f5;
 
 .from-info .from-dec {
   font-size: 14px;
-  color: #6d6d72;
+  color: #3c3c43;
   line-height: 1.5;
   word-break: keep-all;
   display: -webkit-box;
@@ -1102,7 +1102,7 @@ background-color: #f5f5f5;
 .center p,
 .right p {
   font-size: 12px;
-  color: #9d9da0;
+  color: #3c3c43;
   line-height: 1.5;
 }
 
@@ -1131,7 +1131,7 @@ background-color: #f5f5f5;
   display: inline-block;
   margin-top: 10px;
   font-size: 13px;
-  color: #828283;
+  color: #3c3c43;
   text-decoration: underline;
 }
 
@@ -1387,7 +1387,7 @@ background-color: #f5f5f5;
     align-items: center;
     cursor: pointer;
     font-size: 24px;
-    color: #333;
+    color: #3c3c43;
   }
 
   .nav-item img {
@@ -1452,7 +1452,7 @@ background-color: #f5f5f5;
 
 .footer-nav a {
   font-size: 11px;
-  color: #333;
+  color: #3c3c43;
   font-weight: bold;
 }
 
@@ -1490,7 +1490,7 @@ background-color: #f5f5f5;
 .footer-column.center::before {
   content: "무인양품(주) 사업자정보 ⌵";
   font-size: 12px;
-  color: #999;
+  color: #3c3c43;
 }
 
 /* 숨길 내용들 (center의 정보 + right 전체) */
@@ -1519,7 +1519,7 @@ background-color: #f5f5f5;
 .company-info p,
 .customer-service p {
   font-size: 11px;
-  color: #999;
+  color: #3c3c43;
   line-height: 1.6;
   margin: 3px 0;
 }
@@ -1533,7 +1533,7 @@ background-color: #f5f5f5;
 
 .social-links i {
   font-size: 18px;
-  color: #333;
+  color: #3c3c43;
 }
 
 /* 글로벌 사이트 버튼 */
@@ -1645,7 +1645,7 @@ popup */
 
 .dont-show-again {
   font-family: "paperlogy";
-  color: #9d9da0;
+  color: #3c3c43;
   margin-top: 18px;
   font-size: 13px;
   cursor: pointer;
@@ -1681,7 +1681,7 @@ popup */
 }
 
 .dont-show-again:hover label {
-  color: #333;
+  color: #3c3c43;
   cursor: pointer;
 }
 
@@ -1747,7 +1747,7 @@ search popup */
 }
 
 .empty-state p {
-    color: #999;
+    color: #3c3c43;
     font-size: 16px;
 }
 
@@ -1760,7 +1760,7 @@ search popup */
 
 .update-info {
     font-size: 12px;
-    color: #999;
+    color: #3c3c43;
 }
 
 /* Popular List Styling */
@@ -1774,7 +1774,7 @@ search popup */
     display: flex;
     align-items: center;
     font-size: 16px;
-    color: #333;
+    color: #3c3c43;
 }
 
 .rank {
@@ -1784,7 +1784,7 @@ search popup */
 }
 
 .rank:nth-child(n+4) {
-    color: #333; /* Only top 3 are highlighted */
+    color: #3c3c43; /* Only top 3 are highlighted */
 }
 
 .text {
@@ -1793,7 +1793,7 @@ search popup */
 }
 
 .trend {
-    color: #ccc;
+    color: #3c3c43;
     font-weight: 300;
 }
 
